--- a/msgpack-idl/msgpack-idl.cabal
+++ b/msgpack-idl/msgpack-idl.cabal
@@ -29,6 +29,8 @@ library
                      , containers       >= 0.4
                      , filepath         >= 1.1 && < 1.4
                      , directory
+                     , xml-conduit      >= 1.1
+                     , system-filepath  >= 0.4
                      , msgpack          == 0.7.*
                      , peggy            == 0.3.*
 
@@ -36,6 +38,7 @@ library
   
   exposed-modules:     Language.MessagePack.IDL
                        Language.MessagePack.IDL.Check
+                       Language.MessagePack.IDL.CodeGen.CliXml
                        Language.MessagePack.IDL.CodeGen.Cpp
                        Language.MessagePack.IDL.CodeGen.Haskell
                        Language.MessagePack.IDL.CodeGen.Java
